src/objects/Tournament__c.object
<CustomObject>
    <fields>
        <fullName>Locations__c</fullName>
        <description>Location of the tournament</description>
        <label>Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxPlayers__c</fullName>
        <description>The max number of players in a tournament</description>
        <label>MaxPlayers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tournament_Date__c</fullName>
        <label>Tournament_Date</label>
        <type>Date</type>
    </fields>
    <label>Tournament</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tournament Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tournaments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>